# LoomCode

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  context.py  feature_list.json  feature_list.schema.json  feature_list_roadmap.json  hook.py  init.sh  main.py  models.py  progress.md  prompt.py  pyproject.toml  session-handoff.md  test.py
.github/workflows/: ci.yml
docs/: architecture.md  context.md  harness-roadmap.md  hooks.md  init-sh.md  lsp.md  mcp.md  providers.md  review.md  testing.md  tools.md  triangle-protocol-examples.md  triangle-protocol.md  tui-design-language.md  tui-design.html  tui-scrolling.md
loom/: __init__.py  audit_cmd.py  cli.py  detect.py  init_cmd.py
loom/agent/: __init__.py  background_registry.py  checkpoint.py  cold_archive.py  config.py  context.py  cost.py  credential.py  export.py  hooks.py  llm.py  loop.py  lsp_apply.py  lsp_client.py  lsp_manager.py  mcp_client.py  mcp_manager.py  model_resolver.py  model_state.py  models_dev.py  permission_store.py  permissions.py  prompt.py  repomap.py  review.py  scope.py  session_store.py  subagent_templates.py  system_prompt.py  tdd.py  tool_errors.py  tool_registry.py  tools.py  trace.py  triangle_protocol.py
loom/eval/: __init__.py  _util.py  agent_quality.py  baseline.py  runner.py
loom/memory/: __init__.py  context.py  store.py
loom/rpc/: __init__.py  codec.py  protocol.py  server.py
loom/skills/: __init__.py  discovery.py  registry.py
loom/templates/: agents.md  feature-list.schema.json  loom-eval.yml
loom/tui/: app.py  auth_input.py  chat_log.py  command_palette.py  completer.py  composer.py  connect_provider.py  diff_pane.py  header.py  messages.py  model_picker.py  screens.py  session_picker.py  slash_commands.py  status_bar.py  welcome.py  widgets.py
loop/: __init__.py  audit_cmd.py  cli.py  init_cmd.py
loop/agent/: __init__.py  checkpoint.py  config.py  hooks.py  llm.py  loop.py  permissions.py  prompt.py  scope.py  tool_registry.py  tools.py  trace.py  user_hooks.py
loop/eval/: __init__.py  _util.py  runner.py
scripts/: build-tui.sh  swebench_runner.py  swebench_worker.py  verify-quick.sh
tests/: _mock_provider.py  conftest.py  test_agent_loop.py  test_agent_quality_framework.py  test_app_shuttle.py  test_audit_cmd.py  test_auto_connect_prompt.py  test_autocompact_fallback.py  test_background_registry.py  test_background_subagent.py  test_bash_allow_patterns.py  test_chat_log_engine_state.py  test_chat_log_inline_markers.py  test_chat_log_p0.py  test_chat_log_p1.py  test_chat_log_p1_marker_summary.py  test_chat_log_p2.py  test_chat_log_streaming.py  test_checkpoint.py  test_cjk_newline_fix.py  test_cli_models_auth.py  test_cli_run_tui.py  test_cold_archive.py  test_cold_archive_tools.py  test_command_completer.py  test_command_palette.py  test_composer_completion_enter.py  test_connect_provider_modal.py  test_context.py  test_conversation_export.py  test_cost_telemetry.py  test_credential.py  test_ctx_rail.py  test_detect.py  test_diff_pane.py  test_edit_file_v2.py  test_engine_state.py  test_eval_baseline.py  test_eval_runner.py  test_generator_prompt.py  (+80 more)
tui-go/: go.mod  go.sum  main.go  slash_commands.go
(+194 files in other folders)
