[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom"
version = "0.2.0"
description = "Minimal Claude-Code-like Python coding agent: agent_loop, tools, hooks, context compression, subagent delegation, harness tooling."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "anthropic",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "textual>=0.85.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest-textual-snapshot>=0.4.0",
]

[project.scripts]
loom = "loom.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["loom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "harness-creator",
    ".venv",
    "__pycache__",
    ".agents",
    "agent",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",
    "B008",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disable_error_code = [
    "var-annotated",
    "operator",
    "return-value",
    "name-defined",
    "typeddict-item",
    "attr-defined",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
